# suno-downloader

./: CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
chrome-extension/: background.js  content.js  injected.js  manifest.json  popup.html  popup.js
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: chrome_extension.rs  commands.rs  lib.rs  main.rs  token_server.rs
src-tauri/src/config/: date_filters.rs  date_folders.rs  filenames.rs  local_index.rs  mod.rs  paths.rs  session.rs  settings.rs
src-tauri/src/suno/: api.rs  auth.rs  mod.rs  sync.rs  types.rs
src/components/: AuthControls.tsx  ChromeExtensionDownloadButton.tsx
src/components/layout/: AppLayout.tsx
src/lib/: defaults.ts  labels.ts  suno.ts  tauri.ts
src/pages/: AuthSetupPage.tsx  LibraryPage.tsx  SettingsPage.tsx  SyncPage.tsx
